--- a/docs/_themes/alabaster/theme.conf
+++ b/docs/_themes/alabaster/theme.conf
@@ -52,7 +52,7 @@ narrow_sidebar_bg = #333
 narrow_sidebar_fg = #FFF
 narrow_sidebar_link =
 
-canonical_url = http://openmetric.org/qft
+canonical_url = http://qft.readthedocs.io/
 html_description =  "Quantum Field Theory Notes"
 html_keywords = "Quantum Field Theory, Quantum, Field Theory"
 html_author = "Lei Ma"
