added the correct disqus short name and define it as a theme variable for easier config

--- a/docs/_themes/alabaster/theme.conf
+++ b/docs/_themes/alabaster/theme.conf
@@ -56,3 +56,4 @@ canonical_url = http://qft.readthedocs.io/
 html_description =  "Quantum Field Theory Notes"
 html_keywords = "Quantum Field Theory, Quantum, Field Theory"
 html_author = "Lei Ma"
+disqus_short_name = 'qft'
